--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          <div class="home_page_banner ">
          <p class="text-xl mt-8 mb-6 font-light">About Us</p>
          <h1 class="text-7xl w-2/3 font-semibold">Creative studio <br class="hidden md:block"> that inspires.</h1>
-         <img class="mt-8 rounded-2xl" src="/public/images/banner_image.webp" alt="">
+         <img class="mt-8 rounded-2xl" src="/Fylla_Agency/assest/banner_image.webp" alt="">
       </div>
 
       <!-- Part-2 of HomePage -->
@@ -100,25 +100,25 @@
             <div class="right_videos gap-8">
 
              <div class="video_a video w-full mb-8">
-                 <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/public/images/ceo.mp4"></video>
+                 <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/Fylla_Agency/assest/ceo.mp4"></video>
                  <h3 class="text-2xl mt-2 mb-2">Jacob Jones</h3>
                  <p class="text-[0.9rem] font-light">CEO</p>
              </div>
 
              <div class="video_a video w-full mb-8">
-                  <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/public/images/creative.mp4"></video>
+                  <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/Fylla_Agency/assest/creative.mp4"></video>
                   <h3 class="text-xl mt-2 mb-2">Kristin Watson</h3>
                   <p class="text-[0.9rem] font-light">Creative Director</p>
               </div>
 
               <div class="video_a video w-full mb-8">
-                  <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/public/images/visual.mp4"></video>
+                  <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/Fylla_Agency/assest/visual.mp4"></video>
                   <h3 class="text-2xl mt-2 mb-2">Cameron William</h3>
                   <p class="text-[0.9rem] font-light">Visual Designer</p>
               </div>
 
               <div class="video_a video w-full mb-8">
-                  <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/public/images/cto.mp4"></video>
+                  <video loop muted preload="auto" autoplay type="video/mp4" class="rounded-2xl" src="/Fylla_Agency/assest/cto.mp4"></video>
                   <h3 class="text-2xl mt-2 mb-2">Guy Hawkins</h3>
                   <p class="text-[0.9rem] font-light">CTO</p>
               </div>
